--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="MarttinFisher - MachiMorales">
     <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="keywords" CONTENT="neethu,basil,neethujohn"> <meta name="description" CONTENT="neethuwedsbasil">
    <!--  <meta name="robots" content="index/follow"/>
     <meta name="keywords" content="template,html,design,web,frontend,wedding,bodas,website,marriage,bride,groom,responsive,themeforest,envato"/> -->
     <!-- <meta name="description" content="BODAS is a Responsive HTML Wedding Template with clean, elegant and modern design. Great for wedding invitation or engagement. Coming with wedding features such as Couple Timeline, Countdown, Photo gallery, featured people, Gift Registry, RSVP and others."/> -->
